# aquestts

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: release.yml  upload.yml
aquestalk/: Cargo.toml  build.rs
aquestalk/src/: lib.rs
bot/: Cargo.toml
bot/src/: main.rs
src/: ffi.rs  main.rs
