[package]
name = "aquestts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
libc = "0.2.146"
poise = "0.5.5"
songbird = { version = "0.3.2", features = ["serenity"] }
tokio = { version = "1.28.2", features = ["full"] }

[build-dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
zip = "0.6.6"
